--- a/rating.kv
+++ b/rating.kv
@@ -380,7 +380,7 @@
     BoxLayout:
         orientation: 'vertical'
         BoxLayout:
-            size_hint_y: .1
+            size_hint_y: root.metadata_display_height
             ColoredLabel:
                 id: team_label
                 font_size: root.height/40
@@ -407,7 +407,7 @@
                 text: 'No Jersey Number'
                 bold: True
         BoxLayout:
-            size_hint_y: .65
+            size_hint_y: root.video_player_height
             orientation: 'horizontal'
 
             VideoPlayer:
@@ -433,259 +433,44 @@
                     orientation: 'vertical'
                 Widget:
                     # Spacer to push plot to top
-        Label:
-            id: info_label
-            size_hint_y: .05
 
         BoxLayout:
-            size_hint_y: 0.1
-            Button:
-                size_hint_x: .25
-                font_size: root.height/40
-                text: 'Back to User Data'
-                on_release: root.confirm_back_to_questionnaire()
-            ToggleButton:
-                id: btn_notrec
-                font_size: root.height/40
-                size_hint_x: .3
-                text: 'Action not Recognized'
-                on_state: root.action_not_recognized = (self.state == 'down')        
-            Button:
-                id: submit_button
-                font_size: root.height/40
-                size_hint_x: .4
-                text: 'Submit Rating'
-                disabled: (root.current_rating is None) and (not root.action_not_recognized)
-                opacity: 1 if not self.disabled else .5
-                on_release:
-                    root.submit_rating()
-
-        ########### Creativity Rating ###########
-        BoxLayout:
-            canvas.before:
-                Color:
-                    rgba: (100/255, 100/255, 100/255,1)
-                Rectangle:
-                    pos: self.pos
-                    size: self.size
-            size_hint_y: .12
+            size_hint_y: root.control_buttons_height
             orientation: 'vertical'
 
+            Label:
+                id: info_label
+                size_hint_y: 0.3
+                font_size: root.height/50
+
             BoxLayout:
-                size_hint_y: .4
-                Label:
+                size_hint_y: 0.7
+                Button:
+                    size_hint_x: .25
                     font_size: root.height/40
-                    size_hint_x: None
-                    text: 'Creativity Rating:'
-                    width: dp(220)
-                    halign: 'left'
-                    text_size: self.size
+                    text: 'Back to User Data'
+                    on_release: root.confirm_back_to_questionnaire()
+                ToggleButton:
+                    id: btn_notrec
+                    font_size: root.height/40
+                    size_hint_x: .3
+                    text: 'Action not Recognized'
+                    on_state: root.action_not_recognized = (self.state == 'down')
+                Button:
+                    id: submit_button
+                    font_size: root.height/40
+                    size_hint_x: .4
+                    text: 'Submit Rating'
+                    disabled: (not root.has_any_rating) and (not root.action_not_recognized)
+                    opacity: 1 if not self.disabled else .5
+                    on_release:
+                        root.submit_rating()
 
-            BoxLayout:
-                size_hint_y: .4
-                spacing: 6
-                ToggleButton:
-                    id: r_m3
-                    text: '1'
-                    group: 'likert7'
-                    on_state: root.set_likert(1) if self.state == 'down' else None
-                ToggleButton:
-                    id: r_m2
-                    text: '2'
-                    group: 'likert7'
-                    on_state: root.set_likert(2) if self.state == 'down' else None
-                ToggleButton:
-                    id: r_m1
-                    text: '3'
-                    group: 'likert7'
-                    on_state: root.set_likert(3) if self.state == 'down' else None
-                ToggleButton:
-                    id: r_0
-                    text: '4'
-                    group: 'likert7'
-                    on_state: root.set_likert(4) if self.state == 'down' else None
-                ToggleButton:
-                    id: r_p1
-                    text: '5'
-                    group: 'likert7'
-                    on_state: root.set_likert(5) if self.state == 'down' else None
-                ToggleButton:
-                    id: r_p2
-                    text: '6'
-                    group: 'likert7'
-                    on_state: root.set_likert(6) if self.state == 'down' else None
-                ToggleButton:
-                    id: r_p3
-                    text: '7'
-                    group: 'likert7'
-                    on_state: root.set_likert(7) if self.state == 'down' else None
-
-            BoxLayout:
-                size_hint_y: .2
-                Label:
-                    text: 'not creative'
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: 'very creative'
-
-        ########## Technical Correctness Rating ##########
+        ########### Dynamic Rating Scales (configured via config.yaml) ###########
+        # This container will be populated dynamically at runtime based on
+        # the rating_scales configuration in config.yaml
         BoxLayout:
-            canvas.before:
-                Color:
-                    rgba: (100/255, 100/255, 100/255,1)
-                Rectangle:
-                    pos: self.pos
-                    size: self.size
-            size_hint_y: .12
+            id: scales_container
             orientation: 'vertical'
-
-            BoxLayout:
-                size_hint_y: .4
-                Label:
-                    font_size: root.height/40
-                    size_hint_x: None
-                    text: 'Technical Correctness:'
-                    width: dp(220)
-                    halign: 'left'
-                    text_size: self.size
-
-            BoxLayout:
-                size_hint_y: .4
-                spacing: 6
-                ToggleButton:
-                    id: t_m3
-                    text: '1'
-                    group: 'likert7_tech'
-                    on_state: root.set_likert_tech(1) if self.state == 'down' else None
-                ToggleButton:
-                    id: t_m2
-                    text: '2'
-                    group: 'likert7_tech'
-                    on_state: root.set_likert_tech(2) if self.state == 'down' else None
-                ToggleButton:
-                    id: t_m1
-                    text: '3'
-                    group: 'likert7_tech'
-                    on_state: root.set_likert_tech(3) if self.state == 'down' else None
-                ToggleButton:
-                    id: t_0
-                    text: '4'
-                    group: 'likert7_tech'
-                    on_state: root.set_likert_tech(4) if self.state == 'down' else None
-                ToggleButton:
-                    id: t_p1
-                    text: '5'
-                    group: 'likert7_tech'
-                    on_state: root.set_likert_tech(5) if self.state == 'down' else None
-                ToggleButton:
-                    id: t_p2
-                    text: '6'
-                    group: 'likert7_tech'
-                    on_state: root.set_likert_tech(6) if self.state == 'down' else None
-                ToggleButton:
-                    id: t_p3
-                    text: '7'
-                    group: 'likert7_tech'
-                    on_state: root.set_likert_tech(7) if self.state == 'down' else None
-            BoxLayout:
-                size_hint_y: .2
-                Label:
-                    text: 'very low'
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: 'very high'
-
-        ########## Aesthetic Appeal Rating ##########
-        BoxLayout:
-            canvas.before:
-                Color:
-                    rgba: (100/255, 100/255, 100/255,1)
-                Rectangle:
-                    pos: self.pos
-                    size: self.size
-            size_hint_y: .12
-            orientation: 'vertical'
-
-            BoxLayout:
-                size_hint_y: .4
-                Label:
-                    font_size: root.height/40
-                    size_hint_x: None
-                    text: 'Aesthetic Appeal:'
-                    width: dp(220)
-                    halign: 'left'
-                    text_size: self.size
-
-            BoxLayout:
-                size_hint_y: .4
-                spacing: 6
-                ToggleButton:
-                    id: a_m3
-                    text: '1'
-                    group: 'likert7_aes'
-                    on_state: root.set_likert_aesthetic(1) if self.state == 'down' else None
-                ToggleButton:
-                    id: a_m2
-                    text: '2'
-                    group: 'likert7_aes'
-                    on_state: root.set_likert_aesthetic(2) if self.state == 'down' else None
-                ToggleButton:
-                    id: a_m1
-                    text: '3'
-                    group: 'likert7_aes'
-                    on_state: root.set_likert_aesthetic(3) if self.state == 'down' else None
-                ToggleButton:
-                    id: a_0
-                    text: '4'
-                    group: 'likert7_aes'
-                    on_state: root.set_likert_aesthetic(4) if self.state == 'down' else None
-                ToggleButton:
-                    id: a_p1
-                    text: '5'
-                    group: 'likert7_aes'
-                    on_state: root.set_likert_aesthetic(5) if self.state == 'down' else None
-                ToggleButton:
-                    id: a_p2
-                    text: '6'
-                    group: 'likert7_aes'
-                    on_state: root.set_likert_aesthetic(6) if self.state == 'down' else None
-                ToggleButton:
-                    id: a_p3
-                    text: '7'
-                    group: 'likert7_aes'
-                    on_state: root.set_likert_aesthetic(7) if self.state == 'down' else None
-            BoxLayout:
-                size_hint_y: .2
-                Label:
-                    text: 'not appealing'
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: ''
-                Label:
-                    text: 'very appealing'
+            size_hint_y: root.rating_scales_height
 
